# skynet_editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: icons.pdn  neural.blend  neural.pdn  未命名.pdn
data/Model/Blends/: Frog.glb
data/script/: a.lua  id.lua
data/shader/: base.frag  base_lighting.frag  lighting.frag  lighting.glsl.frag  lighting.glsl.vert  pbr.frag  pbr.vert  ray.frag  raymarching.frag
include/: mygame.h
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/lua/src/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  loslib.c  lparser.c  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  luac.c  lundump.c  lutf8lib.c  lvm.c  lzio.c  lzio.h
lib/machineid/src/machineid/: machineid.cpp
lib/raylib/src/: rlgl.h
src/: game.cpp  gui.cpp  main.cpp
src/brain/: NodeEditor.cpp  NodeEditor.h  NodeEvent.h  brain.cpp  bug.cpp  editor.cpp  graph.h  heartchart.h  menu.cpp  network.cpp  network.h  node.h  uuid.hpp  world.cpp
src/brain/graphics/: lighting.h
src/core/: Brain.cpp  Brain.h  Cell.cpp  Cell.h  CellSignal.cpp  CellSignal.h  ECS.h  GraphEditor.cpp  GraphEditor.h  MuscleCell.cpp  MuscleCell.h  NeuralCell.cpp  NeuralCell.h  VisionCell.cpp  VisionCell.h  mycolor.h  mygame.h  myinput.h  myscript.h  node.h
src/engine/: Application.cpp  Application.h  Engine.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
src/graphic/: renderer2d.h  renderer3d.h
src/include/: mygame.h  myinput.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/nuklear/: node_editor.c  raylib-nuklear.h
